DB changes: traits & character hooks
traits & character hooks can now be filtered by age. When generating NPC children, this prevents very wrong stuff like "Baby Joe, the 6 year old Prostitute with a Drug Addiction"
