# modules/trait/trait.route.ts
@@ -2,6 +2,7 @@ import { FastifyInstance } from 'fastify';
 import { $ref } from './trait.schema';
 import {
   getRandomTraitHandler,
+  getRandomTraitForAgeHandler,
   getTraitDescriptionHandler,
 } from './trait.controller';
 
@@ -21,6 +22,23 @@ async function traitRoutes(server: FastifyInstance) {
       },
     },
     getRandomTraitHandler
+  );
+
+  server.post(
+    '/random/:age',
+    {
+      schema: {
+        summary: 'Returns a random trait for the given age.',
+        description:
+          'Returns a random trait for the given age. The age must be one of the following: "child", "adolescent", "young adult", "adult", "middle-aged", "elderly", "venerable".',
+        body: $ref('getRandomTraitSchema'),
+        tags: ['traits'],
+        response: {
+          200: $ref('getRandomTraitResponseSchema'),
+        },
+      },
+    },
+    getRandomTraitForAgeHandler
   );
 
   server.get(
